--- a/config/database.yml
+++ b/config/database.yml
@@ -8,18 +8,20 @@ default: &default
   adapter: postgresql
   pool: 5
   timeout: 5000
-
+  encoding: unicode
+  username: postgres
+  password: fils2pute-
 development:
   <<: *default
-  database: db/development
+  database: yourownpoet-development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test
+  database: yourownpoet-test
 
 production:
   <<: *default
-  database: db/production
+  database: yourownpoet-production
